--- a/climber.yaml
+++ b/climber.yaml
@@ -1,7 +1,7 @@
 units:
   kx: cx
   ky: cy
-  px: 2
+  px: 1
   py: px
 
 points:    
@@ -10,14 +10,23 @@ points:
       choc_hotswap:
         type: choc
         params:
-          hotswap: true
-          reverse: true
-          keycaps: true
+          hotswap: false
+          reverse: false
+          keycaps: false
         nets:
           # from: P1
           # to: P2
           from: =colrow
           to: =column_net
+    diode:
+      type: diode
+      nets:
+        # from: P3
+        # to: P4
+        from: =colrow
+        to: =row_net
+      anchor:
+        shift: [0, -5]
   zones:
     matrix:
       key:
@@ -83,15 +92,45 @@ outlines:
       - type: keys 
         side: left
         size: [kx + px, ky + py]
-        corner: px
-    controller_area:
-      # The coontroler itself is about 18mm by 33mm
+        # corner: px
+    switches:
       main:
-        type: rectangle
+        type: keys
+        side: left
+        size: 14
+    keycaps:
+      main:
+        type: keys
+        side: left
+        size: [kx, ky]
+        corner: 1
+    trrs:
+      - type: rectangle
         anchor:
           ref: matrix_inner_top
-          shift: [0.5 kx + 0.5px - 2*px -1.8, -67 + 0.5 ky + 0.5 py]
-        size: [16 + 2*px, 67]
+          shift: [0.5 kx + 5 + 6 + px, 0.5ky - 33 - 8]
+        size: [12, 6]
+    controller:
+      # The coontroler itself is about 18mm by 33mm
+      - type: rectangle
+        anchor:
+          ref: matrix_inner_top
+          shift: [0.5 kx + 5, 0.5ky - 33]
+        size: [18, 33]
+
+    controller_area:
+      # We anchor it on the inner/top key.
+      # We keep the left side on that key to make things simple
+      - type: rectangle
+        anchor:
+          ref: matrix_inner_top
+          shift: [0, -67 + 0.5 ky + 0.5 py]
+        # Width is
+        #    the space between the controller and keys
+        # + the controller itself
+        # + half a key
+        # + px
+        size: [5 + 18 + 0.5*kx + px, 67]
         corner: px
     bottom_fill_1:
       - type: rectangle
@@ -99,58 +138,41 @@ outlines:
           ref: matrix_pinky_bottom
           shift: [-0.5kx - 0.5px, -.5ky-0.5py]
         size: [5 kx, 3ky+py]
-        corner: px
+        # corner: px
     thumb_fill_1:
       - type: rectangle
         anchor:
           ref: thumb_near_thumb_row
-          shift: [0, -0.5 ky]
+          shift: [0, -0.25 ky]
           rotate: -6.75
         size: [1 kx, 1ky]
-    thumb_fill_2:
       - type: rectangle
         anchor:
           ref: thumb_home_thumb_row
-          shift: [0, -0.5 ky]
+          shift: [0, -0.25 ky]
           rotate: -6.75
         size: [1 kx, 1ky]
-    switches:
-      main:
-        type: keys
-        side: left
-        size: 14
-        bound: false
-    keycaps:
-      main:
-        type: keys
-        side: left
-        size: [kx, ky]
-        bound: false
-        corner: 1
+
+    base_square:
+      - raw
+      - bottom_fill_1
+      - thumb_fill_1
+      - controller_area
     base_outline:
-      main:
-        type: outline
-        name: raw
-      controller:
-        type: outline
-        name: controller_area
-        #operation: stack
-      fill:
-        type: outline
-        name: bottom_fill_1
-        #operation: stack
-      thumb_fill:
-        type: outline
-        name: thumb_fill_1
-        #operation: stack
-      thumb_fill_two:
-        type: outline
-        name: thumb_fill_2
-        #operation: stack
+      - type: outline
+        name: base_square
+        fillet: 1
+
+    preview:
+      - base_outline
+      - ^keycaps
+      - ^controller
+      - ^trrs
     pcb:
-      main:
-        type: outline
-        name: base_outline
+      - base_outline
+    top_plate:
+      - base_outline
+      - -switches
 
 pcbs:
   board:
@@ -158,24 +180,64 @@ pcbs:
       edge:
         outline: pcb
         layer: Edge.Cuts
-#    footprints:
-#      mcu_l:
-#        type: promicro
-#        params:
-#          orientation: up
-#          batteryPins: true
-#        anchor:
-#          ref:
-#            - matrix_inner_top
-#          shift: [20, -11]
-#          rotate: 270
-#      mcu_r:
-#        type: promicro
-#        params:
-#          orientation: down
-#          batteryPins: true
-#        anchor:
-#          ref:
-#            - matrix_inner_top
-#          shift: [22.5, -12.25]
-#          rotate: 270
+    footprints:
+      trrs:
+        type: trrs
+        anchor:
+          ref:
+            - matrix_inner_bottom
+          shift: [30, -8]
+          rotate: 270
+        params:
+          reverse: true
+          symmetric: true
+        nets:
+          A: ""
+          B: P0
+          C: GND
+          D: VCC
+      mcu_l:
+        type: promicro
+        params:
+          orientation: up
+          batteryPins: true
+        anchor:
+          ref:
+            - matrix_inner_top
+          shift: [20, -11]
+          rotate: 270
+      scrollwheel:
+        type: scrollwheel
+        anchor:
+          ref: matrix_inner_bottom
+          shift: [ -3, -20 ]
+          rotate: -90
+        nets:
+          from: P21
+          to: enc_diode
+          A: P8
+          B: P9
+          C: GND
+          D: ''
+        params:
+          reverse: true
+      encoder:
+        type: rotary
+        anchor:
+          ref: thumb_near_thumb_row
+          # TODO: Should I use MX spacing here, just to be sure?
+          shift: [-1 u, 0]
+        nets:
+          from: P21
+          to: enc_diode
+          A: P8 
+          B: P9
+          C: GND
+      reset:
+        type: button
+        anchor:
+          ref: matrix_inner_top
+          shift: [43, -10]
+        nets:
+          from: GND
+          to: RST
