--- a/climber.yaml
+++ b/climber.yaml
@@ -142,6 +142,8 @@ points:
               B: P9
               C: GND
               D: ""
+            anchor:
+              rotate: 180
           diode:
             type: diode
             nets:
@@ -192,13 +194,13 @@ outlines:
       - type: rectangle
         anchor:
           ref: matrix_inner_top
-          shift: [0.5 kx + 5 + 18 - 6, 0.5ky - 33 - 2 - 6 ]
+          shift: [0.5 kx + 5 + 18 - 12 + px, 0.5ky - 33 - 1 - 6 ]
         size: [12, 6]
     reset:
       - type: rectangle
         anchor:
-          ref: matrix_inner_top
-          shift: [0.5 kx + 5 + 18 + 3, 0.5ky - 33]
+          ref: matrix_pinky_bottom
+          shift: [0.5 kx + px, -6]
         size: [6, 6]
     controller:
       # The coontroler itself is about 18mm by 33mm
@@ -209,18 +211,27 @@ outlines:
         size: [18, 33]
 
     controller_area:
-      # We anchor it on the inner/top key.
-      # We keep the left side on that key to make things simple
-      - type: rectangle
-        anchor:
-          ref: matrix_inner_top
-          shift: [0, -50 + 0.5 ky + py]
-        # Width is
-        #    the space between the controller and keys
-        # + the controller itself
-        # + half a key
-        # + px
-        size: [5 + 18 + 3 + 6 + 0.5*kx + px, 50]
+      - type: polygon
+        points:
+          - ref: matrix_inner_top
+            shift: [0, 0.5ky + py]
+          - ref: matrix_inner_top
+            shift: [0.5 kx + 5 + 18 + px, 0.5 ky + py]
+          - ref: scrollwheel
+            shift: [0.5 kx + px, 0.5 ky + py]
+          - ref: matrix_inner_bottom
+            shift: [0, 0]
+    controller_area_inner:
+      - type: polygon
+        points:
+          - ref: matrix_inner_top
+            shift: [0.5 kx + px, 0.5ky - py]
+          - ref: matrix_inner_top
+            shift: [0.5 kx + 5 + 18 - px, 0.5 ky - py]
+          - ref: matrix_inner_top
+            shift: [0.5 kx + 5 + 18 - px, -2.1 ky - py - 1]
+          - ref: matrix_inner_bottom
+            shift: [0.5 kx + px, 0.5 ky - 1]
     bottom_fill:
       - type: rectangle
         anchor:
@@ -242,32 +253,46 @@ outlines:
           ref: scrollwheel
           shift: [-0.5kx - px - kx, -0.5ky-py]
         size: [kx + 2*px, ky+2*py]
-
-    base_square:
-      - raw
-      - bottom_fill
-      - controller_area
-    base_outline:
-      - type: outline
-        name: base_square
-        fillet: 1
-    pcb:
-      - base_outline
-    top_plate:
+    key_area:
       - type: outline
         name: raw
-        fillet: 1
       - type: outline
         name: bottom_fill
+    base:
+      - key_area
+      - controller_area
+
+    top_plate:
+      - type: outline
+        name: key_area
         fillet: 1
       - -switches
+    pcb:
+      - type: outline
+        name: base
+        fillet: 1
     bottom_plate_1:
-      - raw
-
+      - type: outline
+        name: base
+        fillet: 1
+      - type: outline
+        name: controller_area_inner
+        operation: subtract
+      - type: outline
+        name: switches
+        operation: subtract
+    floor_plate:
+      - type: outline
+        name: base
+        fillet: 1
+    ic_cover:
+      - controller_area
+      - -key_area
 
     preview:
+      - pcb
       # - base_square
-      - base_outline
+      # - base_outline
       # - ^top_plate
       - ^keycaps
       - ^encoder
@@ -278,6 +303,7 @@ outlines:
       - ^reset
       # - ^bottom_fill
       # - ^switches
+      # - ^ic_cover
 
 pcbs:
   board:
@@ -291,7 +317,7 @@ pcbs:
         anchor:
           ref:
             - matrix_inner_bottom
-          shift: [30, -8]
+          shift: [30, 2]
           rotate: 270
         params:
           reverse: true
@@ -309,13 +335,14 @@ pcbs:
         anchor:
           ref:
             - matrix_inner_top
-          shift: [20, -11]
+          shift: [21, -9]
           rotate: 270
       reset:
         type: button
         anchor:
-          ref: matrix_inner_top
-          shift: [43, -10]
+          ref: matrix_pinky_bottom
+          shift: [0.5 kx + px + 3, -3]
+          rotate: 90
         nets:
           from: GND
           to: RST
